--- a/www.topmonks.cz/src/stylesheets/jobs.scss
+++ b/www.topmonks.cz/src/stylesheets/jobs.scss
@@ -1,4 +1,3 @@
-
 main {
   @media (min-width: 1301px) and (max-width: 1800px) {
     background: url("https://res.cloudinary.com/topmonks/image/upload/v1551973762/topmonks.com/jobs/img_side.png") center 6.5% no-repeat;
@@ -69,9 +68,12 @@ p, a {
     }
   }
 
-  @media screen and (min-width: 840px) {
-    .box {
+  .box {
+    @media screen and (min-width: 840px) {
       padding: 18px 40px 38px;
+    }
+    @media (min-width: 1024px) and (max-width: 1840px){
+      min-height: 400px;
     }
   }
 }
